# psd_to_layer_scene

./: .gitignore  Cargo.toml  LICENSE  LICENSE.json  README.md  default_env.tres  icon.png.import  project.godot
addons/psd_to_layer_scene/: .gitignore  execute_panel.gd  execute_panel.tscn  main.rs  make_psd_to_layer_scene.gd  plugin.cfg  plugin.gd  psd_layer_scene_native.gdextension  psd_layer_scene_native.gdnlib  psd_layer_scene_native.gdns  psd_node.gd  wrapper.gd
addons/psd_to_layer_scene/native/: libpsd_layer_to_scene.dylib
addons/psd_to_layer_scene/translation/: translation.csv  translation.csv.import  translation.gd
src/: lib.rs
