[package]
name = "psd_layer_to_scene"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.10.0"
psd = "0.3.1"
image = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libwebp-image = { version = "0.3.0", features = ["libwebp-0_6"] }
libwebp = { version = "0.1.2", features = ["0_6"] }

[lib]
crate-type = ["cdylib"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[patch.crates-io]
psd = { git = 'https://github.com/folt-a/psd', branch = 'master' }